testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/contentMapperSynthesizedDiagnostics.baseline
// === Syntax and Semantic Diagnostics ===
/ProfileCard.vue(1,1): error TS100037: Code generated by the content mapper 'mapper' has problems with no corresponding location in this file.


==== /ProfileCard.vue (1 errors) ====
    <template><h1>Profile</h1></template>
    
!!! error TS100037: Code generated by the content mapper 'mapper' has problems with no corresponding location in this file.
!!! related TS100037 /ProfileCard.vue:1:1: Cannot find name 'jsxRuntime'.
!!! related TS100037 /ProfileCard.vue:1:1: Cannot find name 'Widget'.
    